--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     },
     "devDependencies": {
         "@babel/core": "^7.6.0",
-        "@babel/preset-env": "^7.6.0",
-        "babel-eslint": "^10.1.0",
-        "autoprefixer": "^9.6.1",
-        "babel-loader": "^8.0.6",
         "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+        "@babel/preset-env": "^7.6.0",
+        "autoprefixer": "^9.6.1",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.0.6",
         "copy-webpack-plugin": "^5.0.5",
         "css-loader": "^3.2.0",
         "css-mqpacker": "^7.0.0",
