--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@babel/core": "^7.6.0",
         "@babel/plugin-proposal-class-properties": "^7.12.1",
         "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+        "@babel/plugin-transform-runtime": "^7.12.10",
         "@babel/preset-env": "^7.6.0",
         "autoprefixer": "^9.6.1",
         "babel-eslint": "^10.1.0",
@@ -51,6 +52,7 @@
         "webpack-dev-server": "^3.8.2"
     },
     "dependencies": {
+        "@babel/runtime": "^7.12.5",
         "core-js": "^3.4.7",
         "regenerator-runtime": "^0.13.3"
     }
