--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.12.5",
+        "chart.js": "^2.9.4",
         "core-js": "^3.4.7",
         "leaflet": "^1.7.1",
         "regenerator-runtime": "^0.13.3"
