--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "dependencies": {
         "@babel/runtime": "^7.12.5",
         "core-js": "^3.4.7",
+        "leaflet": "^1.7.1",
         "regenerator-runtime": "^0.13.3"
     }
 }
