--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "dev": "webpack-dev-server --history-api-fallback --inline --open",
         "build": "npm run clear -s && webpack --progress",
         "lint": "eslint -c .eslintrc.js ./src/**/*.js",
-        "clear": "del-cli dist"
+        "clear": "del-cli dist",
+        "test": "jest --verbose"
     },
     "author": "Netizen",
     "license": "ISC",
@@ -19,13 +20,15 @@
         "url": "git+https://github.com/Net-zen/webpack-boilerplate.git"
     },
     "devDependencies": {
-        "@babel/core": "^7.6.0",
+        "@babel/core": "^7.12.10",
         "@babel/plugin-proposal-class-properties": "^7.12.1",
         "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+        "@babel/plugin-transform-modules-commonjs": "^7.12.1",
         "@babel/plugin-transform-runtime": "^7.12.10",
-        "@babel/preset-env": "^7.6.0",
+        "@babel/preset-env": "^7.12.11",
         "autoprefixer": "^9.6.1",
         "babel-eslint": "^10.1.0",
+        "babel-jest": "^26.6.3",
         "babel-loader": "^8.0.6",
         "copy-webpack-plugin": "^5.0.5",
         "css-loader": "^3.2.0",
@@ -37,10 +40,13 @@
         "eslint-config-prettier": "^6.5.0",
         "eslint-loader": "^3.0.2",
         "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-jest": "^24.1.3",
         "file-loader": "^4.2.0",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
+        "identity-obj-proxy": "^3.0.0",
         "image-webpack-loader": "^6.0.0",
+        "jest": "^26.6.3",
         "mini-css-extract-plugin": "^0.8.0",
         "node-sass": "^4.13.0",
         "postcss-loader": "^3.0.0",
@@ -56,6 +62,7 @@
         "chart.js": "^2.9.4",
         "core-js": "^3.4.7",
         "leaflet": "^1.7.1",
+        "node-fetch": "^2.6.1",
         "regenerator-runtime": "^0.13.3"
     }
 }
